--- a/enp/noise.html
+++ b/enp/noise.html
@@ -626,7 +626,8 @@
 
           function getCurrentPositions() {
             const now = new Date();
-            const grid = gridInput.value || 'JO89tt';
+            const grid = gridInput.value;
+            if (!grid || !isValidGrid(grid)) return null;
             const coords = maidenheadToLatLon(grid);
             if (!coords) return null;
             const observer = new Astronomy.Observer(coords.lat, coords.lon, 0);
