--- a/eme-noise-mapper/noise.html
+++ b/eme-noise-mapper/noise.html
@@ -1,9 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-7YST3WTEH3"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-7YST3WTEH3');
+        </script>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-      <title>EME Noise Mapper</title>
+          <title>EME Noise Mapper – Sky Noise & Moon Path Planner</title>
+          <meta name="description" content="EME Noise Mapper visualizes sky noise for Earth–Moon–Earth (EME) communication. Explore Moon and Sun trajectories, identify common Moon windows, and plan contacts—especially useful for stations with obstructions such as trees, buildings, or balconies." />
+      <meta name="keywords" content="EME, Moonbounce, Ham Radio, Amateur Radio, sky noise, Moon Tracking, common moon window, noise, extra path loss, sky noise map" />
+      <meta name="author" content="SA5IKN">
+          <meta name="robots" content="index, follow">
+              <meta property="og:title" id="ogTitle" content="EME Noise Mapper – Sky Noise & Moon Path Planner">
+                  <meta property="og:type" content="website">
+                      <meta property="og:description" id="ogDescription" content="EME Noise Mapper visualizes sky noise for Earth–Moon–Earth (EME) communication. Explore Moon and Sun trajectories, identify common Moon windows, and plan contacts—especially useful for stations with obstructions such as trees, buildings, or balconies.">
+                          <meta property="og:image" content="https://dxer.site/social/eme-eme-noise-mapper.jpg">
+                              <meta property="og:url" content="https://dxer.site/eme-noise-mapper/">
+                                  <meta name="twitter:card" content="summary_large_image">
+                                      <meta name="twitter:title" id="twitterTitle" content="EME Noise Mapper – Sky Noise & Moon Path Planner" />
+                                      <meta name="twitter:description" id="twitterDescription" content="EME Noise Mapper visualizes sky noise for Earth–Moon–Earth (EME) communication. Explore Moon and Sun trajectories, identify common Moon windows, and plan contacts—especially useful for stations with obstructions such as trees, buildings, or balconies." />
+                                      <meta name="twitter:image" content="https://dxer.site/social/eme-eme-noise-mapper.jpg" />
+                                      <link rel="canonical" href="https://dxer.site/eme-noise-mapper/" />
+                                      <!-- Favicon and App Icons -->
+                                      <link rel="apple-touch-icon" sizes="180x180" href="https://dxer.site/assets/apple-touch-icon.png">
+                                          <link rel="icon" type="image/png" sizes="32x32" href="https://dxer.site/assets/favicon-32x32.png">
+                                              <link rel="icon" type="image/png" sizes="16x16" href="https://dxer.site/assets/favicon-16x16.png">
+                                                  <link rel="manifest" href="https://dxer.site/assets/site.webmanifest">
+                                                      <link rel="shortcut icon" href="https://dxer.site/assets/favicon.ico">
+                                                          <script type="application/ld+json">
+                                                              {
+                                                                  "@context": "https://schema.org",
+                                                                  "@type": "WebApplication",
+                                                                  "name": "EME Noise Mapper",
+                                                                  "url": "https://dxer.site/eme-noise-mapper/",
+                                                                  "author": {
+                                                                      "@type": "Person",
+                                                                      "name": "SA5IKN"
+                                                                  },
+                                                                  "description": "EME Noise Mapper visualizes sky noise for Earth–Moon–Earth (EME) communication. Explore Moon and Sun trajectories, identify common Moon windows, and plan contacts—especially useful for stations with obstructions such as trees, buildings, or balconies.",
+                                                                  "applicationCategory": "Science",
+                                                                  "operatingSystem": "All",
+                                                                  "browserRequirements": "Requires JavaScript",
+                                                                  "inLanguage": "en",
+                                                                  "applicationSubCategory": "Amateur Radio Application",
+                                                                  "offers": {
+                                                                      "@type": "Offer",
+                                                                      "price": "0.00",
+                                                                      "priceCurrency": "USD"
+                                                                  }
+                                                              }
+                                                          </script>
       <style>
         body {
           margin: 0;
