--- a/eme-observer/index.html
+++ b/eme-observer/index.html
@@ -185,7 +185,7 @@
                 <div id="relativeChartLabel"></div>
                 <canvas id="relativeDataChart"></canvas>
             </div>
-            <div id="moonChartWrapper" style="display: block;">
+            <div id="moonChartWrapper" style="display: none;">
                 <a href="https://dxer.site/eme-noise-mapper/"
                    class="annual-button dome-button"
                    target="_blank"
