--- a/header.html
+++ b/header.html
@@ -49,6 +49,7 @@
       <div class="absolute left-0 mt-2 w-56 bg-white shadow-lg rounded opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200 z-50">
         <a href="https://dxer.site/eme-observer/" class="block px-4 py-2 hover:bg-gray-100">EME Observer - EME Planner & Map</a>
         <a href="https://eme.radio/moon-ephemeris" class="block px-4 py-2 hover:bg-gray-100">Annual Moon Ephemeris</a>
+        <a href="https://dxer.site/eme-noise-mapper/" class="block px-4 py-2 hover:bg-gray-100">EME Noise Mapper</a>
         <a href="https://dxer.site/sa5ikn-qrb-calculator/" class="block px-4 py-2 hover:bg-gray-100">QRB-QTF Calculator - Azimuth Finder</a>
         <a href="https://dxer.site/greencube-observer.html" class="block px-4 py-2 hover:bg-gray-100">GreenCube Observer</a>
         <a href="https://dxer.site/leo-satellite-observer.html" class="block px-4 py-2 hover:bg-gray-100">LEO Satellite Observer</a>
