--- a/header.html
+++ b/header.html
@@ -79,6 +79,7 @@
       <ul id="mobile-tools-submenu" class="ml-4 mt-1 space-y-1 hidden">
         <li><a href="https://dxer.site/eme-observer/">EME Observer - EME Planner & Map</a></li>
         <li><a href="https://eme.radio/moon-ephemeris">Annual Moon Ephemeris</a></li>
+        <li><a href="https://dxer.site/eme-noise-mapper/">EME Noise Mapper</a>/li>
         <li><a href="https://dxer.site/sa5ikn-qrb-calculator/">QRB-QTF Calculator - Azimuth Finder</a></li>
         <li><a href="https://dxer.site/greencube-observer.html">GreenCube Observer</a></li>
         <li><a href="https://dxer.site/leo-satellite-observer.html">LEO Satellite Observer</a></li>
