--- a/about.html
+++ b/about.html
@@ -86,6 +86,13 @@
               </section>
 
               <section class="mb-6">
+                <h2 class="text-xl font-semibold mb-2">Awards</h2>
+                <p>
+                For the list of selected awards see <a href="https://dxer.site/awards.html" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">Awards page of this website</a>..
+                </p>
+              </section>
+              
+              <section class="mb-6">
                 <h2 class="text-xl font-semibold mb-2">My Amateur Radio Journey</h2>
                 <p>
                 My passion for radio began early. At the age of 8, I built my first receiver, guided solely by books. By 15, I had constructed a single-band transceiver, mastered Morse code, earned my first license, and built a Yagi antenna. A year later, I assembled my first 9-band transceiver and a 2m transverter (though the transverter design was not my own).
