--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
               <section class="mb-6">
                 <h2 class="text-xl font-semibold mb-2">Awards</h2>
                 <p>
-                For the list of selected awards see <a href="https://dxer.site/awards.html" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">Awards page of this website</a>..
+                For the list of selected awards see <a href="https://dxer.site/awards.html" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">Awards page of this website</a>.
                 </p>
               </section>
               
