--- a/eme-noise-mapper/user-guide.html
+++ b/eme-noise-mapper/user-guide.html
@@ -783,6 +783,14 @@
             </div>
           </li>
         </ul>
+        
+        <p>
+          <strong>Current supporters:</strong>
+        </p>
+        <ul>
+          <li>F6IJI</li>
+          <li>I6YPK</li>
+        </ul>
 
         <p>Every contribution, big or small, helps keep EME Observer online and available for the community. Thank you for your support!</p>
       </div>
