--- a/ite/intest1 copy 2.html
+++ b/ite/intest1 copy 2.html
@@ -93,94 +93,106 @@
     </section>
 
     <main class="container mx-auto p-4 max-w-7xl">
-        <div x-data="{ view: 'grid' }" class="mb-8">
+      <div x-data="{ view: 'grid' }" class="mb-8">
 
-          <div class="flex flex-col sm:flex-row sm:items-center justify-between gap-4 mb-6">
-            <div class="flex items-center gap-3">
-              <span class="text-sm font-medium text-gray-700 dark:text-gray-300">Filter posts:</span>
-              <div class="flex flex-wrap gap-2">
-                <button @click="filterPosts('ALL')" role="button" tabindex="0"
-                  class="text-xs sm:text-sm px-3 py-1.5 bg-blue-100 dark:bg-blue-900/40 hover:bg-blue-200 dark:hover:bg-blue-800 focus:bg-blue-300 dark:focus:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 rounded-full transition-all">
-                  ALL
-                </button>
-                <button @click="filterPosts('LEO')" role="button" tabindex="0"
-                  class="text-xs sm:text-sm px-3 py-1.5 bg-blue-100 dark:bg-blue-900/40 hover:bg-blue-200 dark:hover:bg-blue-800 focus:bg-blue-300 dark:focus:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 rounded-full transition-all">
-                  LEO SATS
-                </button>
-                <button @click="filterPosts('GREENCUBE')" role="button" tabindex="0"
-                  class="text-xs sm:text-sm px-3 py-1.5 bg-blue-100 dark:bg-blue-900/40 hover:bg-blue-200 dark:hover:bg-blue-800 focus:bg-blue-300 dark:focus:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 rounded-full transition-all">
-                  GREENCUBE
-                </button>
-                <button @click="filterPosts('QO100')" role="button" tabindex="0"
-                  class="text-xs sm:text-sm px-3 py-1.5 bg-blue-100 dark:bg-blue-900/40 hover:bg-blue-200 dark:hover:bg-blue-800 focus:bg-blue-300 dark:focus:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 rounded-full transition-all">
-                  QO-100
-                </button>
-                <button @click="filterPosts('EME')" role="button" tabindex="0"
-                  class="text-xs sm:text-sm px-3 py-1.5 bg-blue-100 dark:bg-blue-900/40 hover:bg-blue-200 dark:hover:bg-blue-800 focus:bg-blue-300 dark:focus:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 rounded-full transition-all">
-                  EME
-                </button>
-              </div>
-            </div>
-
-            <!-- Grid/List buttons -->
-            <div class="flex gap-2 self-end sm:self-center">
-              <button
-                @click="view = 'grid'"
-                :class="view === 'grid' ? 'bg-blue-600 text-white shadow-md' : 'bg-gray-200 dark:bg-gray-700 text-gray-800 dark:text-gray-200'"
-                class="px-2 py-1 text-xs sm:px-4 sm:py-2 sm:text-sm rounded-lg font-medium transition-all duration-200"
-                style="touch-action: manipulation;"
-                aria-label="Grid view">
-                Grid
+        <div class="flex flex-col sm:flex-row sm:items-center justify-between gap-4 mb-6">
+          <div class="flex items-center gap-3">
+            <span class="text-sm font-medium text-gray-700 dark:text-gray-300">Filter posts:</span>
+            <div class="flex flex-wrap gap-2">
+              <button @click="filterPosts('ALL')" role="button" tabindex="0"
+                class="text-xs sm:text-sm px-3 py-1.5 bg-blue-100 dark:bg-blue-900/40 hover:bg-blue-200 dark:hover:bg-blue-800 focus:bg-blue-300 dark:focus:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 rounded-full transition-all">
+                ALL
               </button>
-
-              <button
-                @click="view = 'list'"
-                :class="view === 'list' ? 'bg-blue-600 text-white shadow-md' : 'bg-gray-200 dark:bg-gray-700 text-gray-800 dark:text-gray-200'"
-                class="px-2 py-1 text-xs sm:px-4 sm:py-2 sm:text-sm rounded-lg font-medium transition-all duration-200"
-                style="touch-action: manipulation;"
-                aria-label="List view">
-                List
+              <button @click="filterPosts('LEO')" role="button" tabindex="0"
+                class="text-xs sm:text-sm px-3 py-1.5 bg-blue-100 dark:bg-blue-900/40 hover:bg-blue-200 dark:hover:bg-blue-800 focus:bg-blue-300 dark:focus:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 rounded-full transition-all">
+                LEO SATS
+              </button>
+              <button @click="filterPosts('GREENCUBE')" role="button" tabindex="0"
+                class="text-xs sm:text-sm px-3 py-1.5 bg-blue-100 dark:bg-blue-900/40 hover:bg-blue-200 dark:hover:bg-blue-800 focus:bg-blue-300 dark:focus:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 rounded-full transition-all">
+                GREENCUBE
+              </button>
+              <button @click="filterPosts('QO100')" role="button" tabindex="0"
+                class="text-xs sm:text-sm px-3 py-1.5 bg-blue-100 dark:bg-blue-900/40 hover:bg-blue-200 dark:hover:bg-blue-800 focus:bg-blue-300 dark:focus:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 rounded-full transition-all">
+                QO-100
+              </button>
+              <button @click="filterPosts('EME')" role="button" tabindex="0"
+                class="text-xs sm:text-sm px-3 py-1.5 bg-blue-100 dark:bg-blue-900/40 hover:bg-blue-200 dark:hover:bg-blue-800 focus:bg-blue-300 dark:focus:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 rounded-full transition-all">
+                EME
               </button>
             </div>
           </div>
 
-          <!-- FIXED: safer Alpine class binding -->
-          <div
-            class="transition-all duration-300"
-            x-bind:class="{
-              'grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6': view === 'grid',
-              'space-y-8': view === 'list'
-            }"
-          >
-
-            <!-- Your existing cards remain 100% unchanged -->
-            <!-- Example card below untouched -->
-
-            <article data-type="QO100"
-              class="bg-white dark:bg-gray-800 rounded-xl shadow-md overflow-hidden transition-[transform,box-shadow] duration-300 ease-out hover:shadow-xl hover:scale-[1.02] transform-gpu will-change-transform isolate group focus-within:shadow-xl focus-within:scale-[1.02] focus:outline-none">
-              <a href="/posts/working-qo100-without-dish.html" class="absolute inset-0 z-10" aria-label="Read full post: Working QO-100 without a dish"></a>
-              <div class="relative overflow-hidden">
-                <img src="https://dxer.site/img/works/Flatpanel.jpeg" alt="QO-100 flat panel setup"
-                  class="w-full h-48 object-cover transition-transform duration-500 ease-out group-hover:scale-105 group-hover:rotate-[0.0001deg]">
-              </div>
-              <div class="p-5 relative z-20">
-                <h3 class="font-semibold text-lg leading-tight mb-2">
-                  <a href="/posts/working-qo100-without-dish.html" class="text-inherit hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
-                    Working QO-100 without a dish: An ultraportable FT8 station
-                  </a>
-                </h3>
-                <p class="text-gray-600 dark:text-gray-400 text-sm line-clamp-2 mb-3">
-                  Compact FT8 setup using a small flat panel antenna, low-power SDR transceiver and minimal gear — ideal for portable operation and field days.
-                </p>
-                <span class="text-blue-600 dark:text-blue-400 text-sm font-medium hover:underline">Read more →</span>
-              </div>
-            </article>
-
-            <!-- other cards unchanged -->
-
+          <div class="flex gap-2 self-end sm:self-center">
+            <button @click="view = 'grid'"
+              :class="view === 'grid' ? 'bg-blue-600 text-white shadow-md' : 'bg-gray-200 dark:bg-gray-700 text-gray-800 dark:text-gray-200'"
+              class="px-4 py-2 rounded-lg font-medium transition-all duration-200"
+              aria-label="Grid view">Grid</button>
+            <button @click="view = 'list'"
+              :class="view === 'list' ? 'bg-blue-600 text-white shadow-md' : 'bg-gray-200 dark:bg-gray-700 text-gray-800 dark:text-gray-200'"
+              class="px-4 py-2 rounded-lg font-medium transition-all duration-200"
+              aria-label="List view">List</button>
           </div>
         </div>
 
+        <div :class="view === 'grid'
+              ? 'grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6'
+              : 'space-y-8'"
+             class="transition-all duration-300">
+
+          <!-- === POST CARD TEMPLATE - duplicate this block for every post === -->
+          <article data-type="QO100"
+            class="bg-white dark:bg-gray-800 rounded-xl shadow-md overflow-hidden transition-[transform,box-shadow] duration-300 ease-out hover:shadow-xl hover:scale-[1.02] transform-gpu will-change-transform isolate group focus-within:shadow-xl focus-within:scale-[1.02] focus:outline-none">
+            <a href="/posts/working-qo100-without-dish.html" class="absolute inset-0 z-10" aria-label="Read full post: Working QO-100 without a dish"></a>
+            <div class="relative overflow-hidden">
+              <img src="https://dxer.site/img/works/Flatpanel.jpeg" alt="QO-100 flat panel setup"
+                class="w-full h-48 object-cover transition-transform duration-500 ease-out group-hover:scale-105 group-hover:rotate-[0.0001deg]">
+            </div>
+            <div class="p-5 relative z-20">
+              <h3 class="font-semibold text-lg leading-tight mb-2">
+                <a href="/posts/working-qo100-without-dish.html" class="text-inherit hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
+                  Working QO-100 without a dish: An ultraportable FT8 station
+                </a>
+              </h3>
+              <p class="text-gray-600 dark:text-gray-400 text-sm line-clamp-2 mb-3">
+                Compact FT8 setup using a small flat panel antenna, low-power SDR transceiver and minimal gear — ideal for portable operation and field days.
+              </p>
+              <span class="text-blue-600 dark:text-blue-400 text-sm font-medium hover:underline">Read more →</span>
+            </div>
+          </article>
+
+          <!-- Example of another card - copy-paste and modify -->
+          <article data-type="LEO"
+            class="bg-white dark:bg-gray-800 rounded-xl shadow-md overflow-hidden transition-[transform,box-shadow] duration-300 ease-out hover:shadow-xl hover:scale-[1.02] transform-gpu will-change-transform isolate group focus-within:shadow-xl focus-within:scale-[1.02] focus:outline-none">
+            <a href="/posts/doppler-controller-rpi.html" class="absolute inset-0 z-10" aria-label="Read full post: Doppler controller"></a>
+            <div class="relative overflow-hidden">
+              <img src="https://dxer.site/img/works/RasPi.jpeg" alt="Raspberry Pi Doppler controller"
+                class="w-full h-48 object-cover transition-transform duration-500 ease-out group-hover:scale-105 group-hover:rotate-[0.0001deg]">
+            </div>
+            <div class="p-5 relative z-20">
+              <h3 class="font-semibold text-lg leading-tight mb-2">
+                <a href="/posts/doppler-controller-rpi.html" class="text-inherit hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
+                  A Doppler controller for 2x FT-818 based on Raspberry Pi Zero W
+                </a>
+              </h3>
+              <p class="text-gray-600 dark:text-gray-400 text-sm line-clamp-2 mb-3">
+                Simple, lightweight frequency tracking solution using Raspberry Pi Zero W and cheap components for smooth LEO satellite passes.
+              </p>
+              <span class="text-blue-600 dark:text-blue-400 text-sm font-medium hover:underline">Read more →</span>
+            </div>
+          </article>
+
+          <!-- === ADD YOUR REMAINING CARDS HERE === -->
+          <!--
+          - My simplistic and portable GreenCube setup (GREENCUBE)
+          - Can an LNA (preamp) be helpful in LEO Satellite DXing? (LEO)
+          - Who Can Work Who or The Physics and Fairy Tales of EME (EME)
+          - WSJT-X Q65 setup guide for EME novices (EME)
+          - Going old school with a home made CW key on the Arrow II (LEO)
+          - Is your rig stable enough for EME using Q65? (EME)
+          -->
+
+        </div>
+      </div>
     </main>
 
     <footer class="bg-gray-100 dark:bg-gray-800 text-center p-6 mt-12 text-sm text-gray-600 dark:text-gray-400 border-t border-gray-200 dark:border-gray-700">
