--- a/ite/intest1.html
+++ b/ite/intest1.html
@@ -82,6 +82,12 @@
     <header class="bg-white dark:bg-gray-800 shadow relative">
       <div id="shared-header"></div>
     </header>
+    
+    <!-- Tailwind safelist for dynamic Alpine classes -->
+    <div class="hidden
+      grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6
+      space-y-8">
+    </div>
 
     <section id="latest-news" class="bg-white dark:bg-gray-800 shadow-sm border-b border-gray-200 dark:border-gray-700 py-3 px-4 mt-2 mx-auto max-w-7xl">
       <div class="flex items-center justify-between mb-2">
