--- a/ite/intest1.html
+++ b/ite/intest1.html
@@ -42,6 +42,8 @@
         darkMode: 'media',
       }
     </script>
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+
     <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js" defer></script>
 
     <style>
